[package]
name = "unic-char-property"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools — Character Property taxonomy, contracts and build macros"
keywords = ["text", "unicode", "character-property"]
categories = ["internationalization", "text-processing", "parsing"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-char-range = { path = "../range/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
appveyor = { repository = "open-i18n/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "open-i18n/rust-unic", branch = "master" }
