[package]
name = "unic-char-range"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools — Character Range and Iteration"
keywords = ["text", "unicode", "utilities", "iteration"]
categories = ["internationalization", "text-processing"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
rayon = { version = "1.0", optional = true }

[features]
default = []
std = []

# Unstable features
unstable = ["exact-size-is-empty", "fused", "trusted-len"]
exact-size-is-empty = []
fused = []
trusted-len = []

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
appveyor = { repository = "open-i18n/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "open-i18n/rust-unic", branch = "master" }
