[package]
name = "unic-idna-mapping"
version = "0.6.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - IDNA - IDNA Mapping Table"
keywords = ["text", "unicode", "idna", "character-property"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
unic-char-range = { path = "../../char/range/", version = "0.6.0" }
unic-char-property = { path = "../../char/property/", version = "0.6.0" }
unic-ucd-version = { path = "../../ucd/version/", version = "0.6.0" }
